<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondGeneralThemeApp"
    tools:context=".presentation.controllers.HostActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="32dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragmentInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/infoWindowRegister"
            android:textColor="@color/colorWhite"
            android:textSize="21sp"
            app:fontFamily="@font/nunito_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_light"
            android:gravity="center|top"
            android:paddingTop="8sp"
            android:text="@string/generalTextRegister"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentInfo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login"
                    style="@style/BasicLayoutTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_regular"
                        android:hint="@string/loginTitle"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/colorGeneralThemeApp"
                        android:textSize="18sp"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/BasicLayoutTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_regular"
                        android:hint="@string/passwordTitle"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorGeneralThemeApp"
                        android:textColorHighlight="@color/colorWhite"
                        android:textSize="18sp"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/restoreButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/restoreAccountButton"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGeneralThemeApp"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/textRegisterLayout"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGeneralThemeApp"
                    android:textSize="17sp"
                    android:paddingBottom="92dp"
                    app:layout_constraintStart_toStartOf="@+id/restoreButton"
                    app:layout_constraintTop_toBottomOf="@+id/restoreButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNextStage"
            android:layout_width="180dp"
            android:layout_height="58dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-28dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/textNextStageRegister"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>